virtualbox-ose (1.5.2-dfsg2-7) UNRELEASED; urgency=low

  [ Patrick Winnertz ]
  * Do only recommends the virtualbox-ose-modules package. Maybe someone
    would like to compile it on it's own, or not with m-a. (Closes: #456989)

  [ Hilko Bengen ]
  * install vbox.cfg using dh_install

  [ Michael Meskes ]
  * Only suggest guest-sources in guest-utils. With l-m-e expected to include
    the guest-modules in the near future, this should be sufficient.

 -- Michael Meskes <meskes@debian.org>  Wed, 19 Dec 2007 12:51:40 +0100

virtualbox-ose (1.5.2-dfsg2-6) unstable; urgency=low

  [ Daniel Baumann ]
  * Again removing reimported useless whitespaces at EOL and EOF in debian/*.
  * Fixing dpatch headers.
  * Rediffed dpatches 6-12.
  * Removed svn:executable on dpatch 9 and 12.

  [ Michael Meskes ]
  * Fixed rules file to correctly install module sources, closes: #456916

 -- Michael Meskes <meskes@debian.org>  Tue, 18 Dec 2007 16:21:33 +0100

virtualbox-ose (1.5.2-dfsg2-5) unstable; urgency=low

  [ Daniel Baumann ]
  * Upgrading virtualbox-ose-modules recommends to depends.
  * Downgrading virtualbox-ose-source recommends to suggests.
  * Bumping policy version, no other changes needed.

  [ Hilko Bengen ]
  * Added support for vditool to VBox.sh
  * Build system:
    - Cleaned up patch/config phase
    - Added copy of init script to debian directory -- no longer copy it
      from src/VBox/Installer/linux/vboxnet.sh
    - symlinks/directories in packages are now created using debhelper
  * Add 2.6.24 compatibility fix (Closes: #456464)

  [ Patrick Winnertz ]
  * Moved initscript again out of debian, we should use the upstream one
    and created a patch for this one. (in order to fix lintian warning)
  * Add description to 02-host-module.dpatch

 -- Patrick Winnertz <winnie@debian.org>  Mon, 17 Dec 2007 17:37:52 +0100

virtualbox-ose (1.5.2-dfsg2-4) unstable; urgency=low

  [ Patrick Winnertz ]
  * Changed my maintainer address

  [ meskes@debian.org ]