@@ -1,0 +1,1 @@
+out/bin/src/* /usr/src/modules/virtualbox-ose
