@@ -1,5 +1,6 @@
 usr/bin
 usr/lib
+usr/lib/virtualbox
 usr/share/virtualbox
 usr/share/icons
 etc/vbox
