@@ -1,1 +1,24 @@
 debian/vbox.cfg /etc/vbox
+debian/interfaces /etc/vbox
+
+debian/desktop/virtualbox-ose.desktop /usr/share/applications
+debian/pixmap/virtualbox-ose.xpm /usr/share/pixmaps
+
+debian/lintian/virtualbox-ose /usr/share/lintian/overrides
+
+out/bin/components /usr/lib/virtualbox
+out/bin/SUP* out/bin/VBoxAddIF.sh out/bin/VBoxBFE /usr/lib/virtualbox
+out/bin/VBoxManage out/bin/VBoxSDL out/bin/VBox.sh /usr/lib/virtualbox
+out/bin/VBoxSVC out/bin/VBoxTunctl out/bin/VBoxXPCOM* /usr/lib/virtualbox
+out/bin/vditool out/bin/VirtualBox* /usr/lib/virtualbox
+
+out/bin/VBox*.so out/bin/VBox*.gc out/bin/VBox*.r0 /usr/lib/virtualbox
+
+out/bin/VirtualBox* /usr/lib/virtualbox
+out/bin/VMM* /usr/lib/virtualbox
+
+out/bin/nls /usr/share/virtualbox
+out/bin/sdk /usr/share/virtualbox
+out/bin/VBox.png /usr/share/virtualbox
+
+out/bin/sdk/bin/xpidl /usr/lib/virtualbox
