@@ -10,3 +10,8 @@
 
 /usr/bin/VboxTAP /usr/bin/VBoxAddIF
 /usr/bin/VboxTAP /usr/bin/VBoxDeleteIF
+
+/usr/share/virtualbox/VBox.png /usr/share/icons/virtualbox.png
+
+/usr/lib/virtualbox/VBoxTunctl /usr/bin/VBoxTunctl
+/usr/lib/virtualbox/VBoxAddIF.sh /usr/bin/VBoxTAP
